{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 72,
  "lineage": "d70f514d-6718-1b26-d061-5e1253da5417",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5fb72b9f24265c6",
            "arn": "arn:aws:ec2:ap-southeast-1:682216940031:elastic-ip/eipalloc-0a5fb72b9f24265c6",
            "domain": "vpc",
            "id": "eipalloc-0a5fb72b9f24265c6",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-54-254-124-92.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.254.124.92",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hms-igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:682216940031:internet-gateway/igw-0b70ff66505ce0d1b",
            "id": "igw-0b70ff66505ce0d1b",
            "owner_id": "682216940031",
            "region": "ap-southeast-1",
            "vpc_id": "vpc-05b7d7b0e579d776f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.hms_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5fb72b9f24265c6",
            "association_id": "eipassoc-0858eabc830400de6",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0313a702498e4a8cc",
            "network_interface_id": "eni-09b55e181557d2f16",
            "private_ip": "10.0.1.24",
            "public_ip": "54.254.124.92",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08b86255721406edb",
            "vpc_id": "vpc-05b7d7b0e579d776f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.hms_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e0c5a4a2e71efa6f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0313a702498e4a8cc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0e0c5a4a2e71efa6f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "682216940031",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0e0c5a4a2e71efa6f"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.hms_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b70ff66505ce0d1b",
            "id": "r-rtb-095f0df5426cdd6af1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-095f0df5426cdd6af",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "682216940031",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-095f0df5426cdd6af"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.hms-igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.hms_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:682216940031:route-table/rtb-0e0c5a4a2e71efa6f",
            "id": "rtb-0e0c5a4a2e71efa6f",
            "owner_id": "682216940031",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05b7d7b0e579d776f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "682216940031",
            "id": "rtb-0e0c5a4a2e71efa6f",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hms_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:682216940031:route-table/rtb-095f0df5426cdd6af",
            "id": "rtb-095f0df5426cdd6af",
            "owner_id": "682216940031",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05b7d7b0e579d776f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "682216940031",
            "id": "rtb-095f0df5426cdd6af",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hms_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0552024fd77c977ac",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0e0c5a4a2e71efa6f",
            "subnet_id": "subnet-07cf1d2b724c500b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.hms_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fec697ad93665ce7",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0e0c5a4a2e71efa6f",
            "subnet_id": "subnet-042b5c8b21658ace9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.hms_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bacb2816b5d46dc3",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-095f0df5426cdd6af",
            "subnet_id": "subnet-08b86255721406edb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.hms_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d597e99e893c5ce",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-095f0df5426cdd6af",
            "subnet_id": "subnet-0716e794e865bad14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.hms_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:682216940031:subnet/subnet-07cf1d2b724c500b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cf1d2b724c500b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682216940031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-05b7d7b0e579d776f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "682216940031",
            "id": "subnet-07cf1d2b724c500b7",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hms_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:682216940031:subnet/subnet-042b5c8b21658ace9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042b5c8b21658ace9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682216940031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-05b7d7b0e579d776f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "682216940031",
            "id": "subnet-042b5c8b21658ace9",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hms_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:682216940031:subnet/subnet-08b86255721406edb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b86255721406edb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "682216940031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-05b7d7b0e579d776f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "682216940031",
            "id": "subnet-08b86255721406edb",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hms_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:682216940031:subnet/subnet-0716e794e865bad14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0716e794e865bad14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "682216940031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-05b7d7b0e579d776f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "682216940031",
            "id": "subnet-0716e794e865bad14",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.hms_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hms_vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:682216940031:vpc/vpc-05b7d7b0e579d776f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-013a2175e2f816596",
            "default_route_table_id": "rtb-0baedbe18f4f551ba",
            "default_security_group_id": "sg-0618d101547f80106",
            "dhcp_options_id": "dopt-0783ddf58887efaba",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b7d7b0e579d776f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0baedbe18f4f551ba",
            "owner_id": "682216940031",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "hm-system-vpc"
            },
            "tags_all": {
              "Name": "hm-system-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "682216940031",
            "id": "vpc-05b7d7b0e579d776f",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}